--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,11 @@ name = "dhcp"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 chrono = "0.4.37"
+tokio = { version = "1.40", features = ["full"]}
+tracing = { version = "0.1.40"}
+tracing-subscriber = "0.3.18"
+bytes = "1.7.2"
+thiserror = "1"
+byteorder = "1.5"
